--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   <main>
     <section class="hero">
       <div class="hero-content">
-        <h1>Analog warmth for the modern ear.</h1>
-        <p>Curated cassette drops bringing back the physical connection to music.</p>
-        <button class="cta-button">Shop Collection</button>
+        <h1>Rewinding the sound of Southeast Asia.</h1>
+        <p>Celebrating the region's independent music culture through analog warmth, curated drops, and long-form features.</p>
+        <button class="cta-button">Community</button>
       </div>
       <div class="hero-image-wrapper">
         <img src="images/hero.png" alt="Listener with headphones" class="hero-image">
@@ -79,5 +79,6 @@
 
   <script src="script.js"></script>
 </body>
+
 
 </html>
